@@ -4,17 +4,44 @@ AC_INIT(cp-tools, 0.00-cvs, [cp-tools-discuss@gnu.org])
 AM_INIT_AUTOMAKE
 
 AC_DISABLE_STATIC
-
 AM_PROG_GCJ
 AC_PROG_LIBTOOL
+
+dnl
+dnl Compile natively with gcj?
+dnl
+AC_ARG_ENABLE([native],
+  [AS_HELP_STRING(--disable-native, disable generation of native binaries [[default=no]])],
+  [
+    if test "x${enableval}" = xno; then
+      enable_gcj=no
+    else
+      enable_gcj=yes
+    fi
+  ],
+  [
+    enable_gcj=yes
+  ]
+)
+if test "x${enable_gcj}" = xyes; then
+  if test "x${GCJ}" = xfalse; then
+    enable_gcj=no
+    echo "Native compilation disabled because gcj not found"
+  fi
+fi
+
+if test "x${enable_gcj}" = xno; then
+  AC_PROG_JAVAC
+fi
+
+AM_CONDITIONAL(ENABLE_GCJ_BINARY, test "x${enable_gcj}" = xyes)
+
+AC_PROG_JAVA
 AC_PROG_JAR
 AC_CHECK_CLASSPATH
-AC_PROG_JAVA
-AC_PROG_JAVAC
 
 dnl Check if required jars are in $prefix/share/java and prepend it to the
 dnl CLASSPATH.
-
 
 if test -z $CLASSPATH
 then
@@ -36,28 +63,6 @@ elif test -d /usr/local/classpath/share/classpath
 then
   classpath_prefix=/usr/local/classpath
 fi
-
-dnl
-dnl Compile natively with gcj?
-dnl
-AC_ARG_ENABLE([native],
-  [AS_HELP_STRING(--disable-native, disable generation of native binaries [[default=no]])],
-  [
-    if test "x${enableval}" = xno; then
-      enable_gcj=no
-    else
-      enable_gcj=yes
-    fi
-  ],
-  [
-    enable_gcj=yes
-  ]
-)
-if test "x${GCJ}" = xfalse; then
-  enable_gcj=no
-  echo "Native compilation disabled because gcj not found"
-fi
-AM_CONDITIONAL(ENABLE_GCJ_BINARY, test "x${enable_gcj}" = xyes)
 
 dnl
 dnl GNU bytecode library
