@@ -1,5 +1,13 @@
 2008-06-29  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
+	* configure.ac:
+	Only check for JAVAC if a native build
+	is not used.
+	* m4/ac_prog_javac.m4:
+	Updated with additional compilers from Classpath.
+	
+2008-06-29  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
 	* INSTALL: Remove ASM requirement.
 	* Makefile.am: Only include GNU bytecode JAR when
 	used.
